Fix for bug #1604 - improved the layout of the view access page somewhat.
Now the items are layed out in a grid to the right of the searcher, which saves some vertical space and has more fluidity to the layout.

Also, the calendar elements have from/to text, which is a small violation of the language text freeze but makes the purpose of the calendar items for each element much clearer.

I'd like to add more text to this page as an explanation, though that would be a larger violation.

--- a/htdocs/theme/default/static/style/style.css
+++ b/htdocs/theme/default/static/style/style.css
@@ -1175,16 +1175,20 @@ a.folderhover {
 }
 #accesslistitems {
     padding: 5px;
-    float: right;
+    margin-left: 35em;
 }
-#accesslistitems table {
+#accesslistitems table.ai-container {
     background-color: #e5e8da;
     padding: 5px 7px 1px 7px;
     color: #000000;
-    margin: 0 0 5px 0;
+    margin: 5px;
     line-height: 20px;
     font-weight: normal;
-    width: 230px;
+    width: auto;
+    float: left;
+}
+#accesslistitems table.preset {
+    background-color: #f5f8da;
 }
 #accesslistitems div div {
     background: none;
